--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skip Intro"
+        android:text="البحث عن عامل "
         android:textColor="@color/primaryDarkColor"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,9 +23,9 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxWidth="110dp"
-        android:text="Next"
+        android:text="تسجيل الدخول للبحث عن عمل"
         app:backgroundTint="@color/primaryDarkColor"
+        android:maxLines="1"
         android:layout_marginBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
