--- a/app/src/main/res/drawable/background_botton.xml
+++ b/app/src/main/res/drawable/background_botton.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 <corners android:radius="30dp"/>
     <size android:width="100dp" android:height="40dp"/>
-    <stroke android:width="2dp"  android:color="@color/primaryDarkColor"/>
-    <solid android:color="@color/primaryLightColor"/>
+    <stroke android:width="2dp"  android:color="@android:color/black"/>
+    <solid android:color="@color/primaryDarkColor"/>
 </shape>
