--- a/app/src/main/res/layout/activity_enter_code.xml
+++ b/app/src/main/res/layout/activity_enter_code.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="40dp"
         android:src="@drawable/img4"
         />
+
     <TextView
         android:id="@+id/txt_code"
         app:layout_goneMarginTop="20dp"
@@ -34,7 +35,7 @@
         android:layout_marginTop="40dp"/>
 
     <com.goodiebag.pinview.Pinview
-        android:id="@+id/firstPinView"
+        android:id="@+id/pin_view"
         app:layout_constraintTop_toBottomOf="@+id/txt_code"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +49,7 @@
         app:pinHeight="40dp"
         app:pinLength="6"
         app:cursorVisible="false"
-        app:forceKeyboard="true"
+        app:forceKeyboard="false"
         app:inputType="number"
         app:password="false"/>
 
@@ -63,7 +64,7 @@
         android:layout_marginEnd="25dp"
         android:layout_height="wrap_content"
         android:background="@drawable/background_botton"
-        app:layout_constraintTop_toBottomOf="@+id/firstPinView"
+        app:layout_constraintTop_toBottomOf="@+id/pin_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
