--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -18,11 +18,13 @@
             <ImageView
                 android:id="@+id/img_back"
                 android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_width="30dp"
+                android:rotation="180"
                 android:layout_height="30dp"
-                android:layout_gravity="end"
-                android:src="@drawable/ic_baseline_keyboard_backspace_24"/>
+                android:layout_gravity="start"
+                android:src="@drawable/ic_baseline_arrow_back_24"/>
 
             <TextView
                 android:text="ابحث عن عامل"
