--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,10 +20,13 @@
         android:id="@+id/img_back"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_gravity="end"
-        android:src="@drawable/ic_baseline_keyboard_backspace_24"/>
+        android:layout_gravity="start"
+        android:rotation="180"
+        android:src="@drawable/ic_baseline_arrow_back_24"
+        android:contentDescription="Back" />
 
     <TextView
         android:text="انشاء حساب"
@@ -329,7 +332,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/btn_sign_up"
+        android:id="@+id/btn_complete"
         android:layout_marginTop="20dp"
         android:text="تسجيل الدخول"
         android:textSize="18sp"
