--- a/app/src/main/res/layout/employee_item.xml
+++ b/app/src/main/res/layout/employee_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
         <variable
             name="employee"
@@ -27,6 +27,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_view"
             android:layout_width="60dp"
+            app:imageUrl="@{employee.imagePath}"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
@@ -50,6 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+
             <ImageView
                 android:tint="@color/primaryDarkColor"
                 android:layout_width="25dp"
@@ -59,6 +61,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginEnd="5dp"/>
+
             <TextView
                 app:setName="@{employee.name}"
                 android:id="@+id/name"
@@ -69,6 +72,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"/>
+
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
