new updates on it fcm

--- a/app/src/main/res/layout/dialoge.xml
+++ b/app/src/main/res/layout/dialoge.xml
@@ -58,7 +58,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="15dp"
             android:layout_width="0dp"
-            android:text="OK"
+            android:text="تم"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="#333639"
@@ -71,7 +71,7 @@
             android:id="@+id/btn_cancel"
             android:layout_gravity="center_horizontal"
             android:layout_margin="15dp"
-            android:text="Cancel"
+            android:text="الرجوع"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
