--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -91,8 +91,10 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent" />
             <EditText
+                android:backgroundTint="@android:color/white"
                 android:id="@+id/enter_message"
                 android:hint="Type Message--"
+                android:inputType="textNoSuggestions"
                 android:textColor="@android:color/black"
                 android:layout_width="0dp"
                 android:layout_weight="5"
